fixed picture issue not fitting in container and background image not spanning the whole page (thanks Mitch!) and added socials buttons. Added box-shadows and hover animations to socials

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin:0;
     padding:0;
     background-image:url(landscape.jpg);   
-    height: 100vh; /* You must set a specified height */
+     /* You must set a specified height */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
@@ -20,6 +20,15 @@ section {
     margin:0;
 }
 
+footer {
+    padding:0;
+    margin:0;
+}
+
+div {
+    padding:0;
+    margin:0;
+}
 /* start of main styles */
 
 
@@ -31,9 +40,9 @@ section {
 
 
 img {
-    max-width:100%;
-    display:block;
-    object-fit:fill;
+    width:100%;
+    height:100%;
+    object-fit:cover;
     width:100%;
     
 }
@@ -67,10 +76,49 @@ p {
 .main_text {
     display:flex;
     flex-direction:column;
-    border:2px solid white;
     flex:3;
+    background-color:rgba(172, 164, 218, .2); 
 }
 
 .image {
     flex:1;
+}
+
+body {
+    position:relative;
+}
+
+footer {
+    display:flex;
+    justify-content:space-around;
+    width:30%;
+    position:fixed;
+    bottom:10px;
+    left:50%;
+    transform:translateX(-50%);
+}
+
+.socials {
+    background-color: rgba(76, 158, 212, 0.6);
+    padding:15px;
+    border-radius:15%;
+    border:2px solid black;
+    box-shadow: -1px -1px 17px 7px #db28db;
+}
+
+a {
+    text-decoration:none;
+    color:orange;
+}
+
+a:hover {
+
+}
+
+.socials:hover {
+    background-color:rgb(192, 5, 5);
+    opacity:1;
+    color:blue;
+    transform: scale(1.5, 1.5);
+    box-shadow: -1px -1px 17px 7px rgb(10, 247, 89);
 }
